deploy/kube/11-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: argocd-test-svc

spec:
  ports:
    - name: http
      port: 80

  selector:
    app: argocd-test-app
